# cadastr_api_test_case

./: Dockerfile  Makefile  README.md  manage.py  pyproject.toml
cadastr/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
cadastr/migrations/: 0001_initial.py  0002_cadastrrecord_created_at_alter_cadastrrecord_result.py
cadastr_api/: asgi.py  settings.py  urls.py  wsgi.py
